[package]
name = "rustyFuture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
log = "0.4.21"
map-macro = "0.3.0"
rand = "0.8.5"
simplelog = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }
